# exercism

./: WORKSPACE
cpp/grains/: BUILD.bazel  grains.cpp  grains.h  grains_test.cpp
cpp/hamming/: BUILD.bazel  hamming.cpp  hamming.h
cpp/hello-world/: BUILD.bazel  Makefile
cpp/hello-world/test/: BUILD.bazel
cpp/leap/: BUILD.bazel  leap.cpp
cpp/nucleotide-count/: BUILD.bazel  nucleotide_count.cpp  nucleotide_count.h
cpp/pangram/: BUILD.bazel  pangram.cpp  pangram.h
cpp/raindrops/: BUILD.bazel  raindrops.cpp  raindrops.h  raindrops_test.cpp
cpp/reverse-string/: BUILD.bazel  reverse_string.cpp  reverse_string.h
cpp/space-age/: BUILD.bazel  space_age.cpp  space_age.h
cpp/triangle/: BUILD.bazel  triangle.cpp  triangle.h
cpp/two-fer/: BUILD.bazel  two_fer.cpp  two_fer.h
go/accumulate/: BUILD.bazel  accumulate.go
go/acronym/: BUILD.bazel  acronym.go
go/bob/: BUILD.bazel  bob.go
go/collatz-conjecture/: BUILD.bazel  collatz_conjecture.go
go/darts/: BUILD.bazel  darts.go
go/difference-of-squares/: BUILD.bazel  difference_of_squares.go
go/gigasecond/: BUILD.bazel  gigasecond.go
go/hamming/: BUILD.bazel  hamming.go
go/hello-world/: BUILD.bazel
go/isogram/: BUILD.bazel  isogram.go
go/leap/: BUILD.bazel  leap.go
go/list-ops/: BUILD.bazel  list_ops.go
go/luhn/: BUILD.bazel  luhn.go
go/nucleotide-count/: BUILD.bazel  nucleotide_count.go
go/pangram/: BUILD.bazel  pangram.go
go/protein-translation/: BUILD.bazel  protein_translation.go  protein_translation_test.go
go/proverb/: BUILD.bazel  proverb.go
go/raindrops/: BUILD.bazel  raindrops.go
go/reverse-string/: BUILD.bazel  reverse_string.go
go/rna-transcription/: BUILD.bazel  rna_transcription.go
go/roman-numerals/: BUILD.bazel  roman_numerals.go
go/scale-generator/: BUILD.bazel  scale_generator.go
go/scrabble-score/: BUILD.bazel  scrabble_score.go
go/space-age/: BUILD.bazel  space_age.go
go/strain/: BUILD.bazel  strain.go
go/triangle/: BUILD.bazel  triangle.go
go/two-fer/: BUILD.bazel  two_fer.go
java/hello-world/: .project  BUILD.bazel  build.gradle
java/reverse-string/: BUILD.bazel
java/two-fer/: BUILD.bazel
python/: BUILD.bazel
python/anagram/: BUILD.bazel  anagram.py
python/armstrong-numbers/: armstrong_numbers.py
python/bank-account/: bank_account.py
python/bob/: BUILD.bazel  bob.py
python/collatz-conjecture/: collatz_conjecture.py
python/complex-numbers/: complex_numbers.py
python/darts/: BUILD.bazel  darts.py
python/difference-of-squares/: difference_of_squares.py
python/gigasecond/: BUILD.bazel
python/grains/: BUILD.bazel  grains.py
python/hamming/: BUILD.bazel  hamming.py
python/isbn-verifier/: isbn_verifier.py
python/isogram/: BUILD.bazel  isogram.py
python/leap/: BUILD.bazel  leap.py
python/matching-brackets/: matching_brackets.py
python/matrix/: BUILD.bazel  matrix.py
python/pangram/: BUILD.bazel  pangram.py
python/perfect-numbers/: perfect_numbers.py
python/phone-number/: phone_number.py
python/prime-factors/: prime_factors.py
python/protein-translation/: protein_translation.py
python/raindrops/: BUILD.bazel  raindrops.py
python/rational-numbers/: rational_numbers.py
python/rna-transcription/: rna_transcription.py
python/robot-name/: robot_name.py
python/saddle-points/: saddle_points.py
python/series/: series.py
python/space-age/: space_age.py
python/sum-of-multiples/: sum_of_multiples.py
python/triangle/: BUILD.bazel  triangle.py
python/twelve-days/: twelve_days.py
python/two-fer/: two_fer.py
python/yacht/: yacht.py
rust/anagram/: BUILD.bazel
rust/anagram/src/: lib.rs
rust/armstrong-numbers/: BUILD.bazel
rust/armstrong-numbers/src/: lib.rs
rust/beer-song/: BUILD.bazel
rust/beer-song/src/: lib.rs
rust/bob/: BUILD.bazel
rust/bob/src/: lib.rs
rust/clock/: BUILD.bazel
rust/clock/src/: lib.rs
rust/difference-of-squares/: BUILD.bazel
rust/difference-of-squares/src/: lib.rs
rust/dot-dsl/: BUILD.bazel  Cargo.toml
rust/dot-dsl/cargo/: BUILD.bazel  crates.bzl
rust/dot-dsl/cargo/remote/: maplit-1.0.2.BUILD.bazel
rust/dot-dsl/src/: lib.rs
rust/gigasecond/: BUILD.bazel  Cargo.toml
rust/gigasecond/cargo/: BUILD.bazel  crates.bzl
rust/gigasecond/cargo/remote/: autocfg-1.0.1.BUILD.bazel  chrono-0.4.19.BUILD.bazel  libc-0.2.79.BUILD.bazel  num-integer-0.1.43.BUILD.bazel  num-traits-0.2.12.BUILD.bazel  time-0.1.44.BUILD.bazel  wasi-0.10.0+wasi-snapshot-preview1.BUILD.bazel  winapi-0.3.9.BUILD.bazel  winapi-i686-pc-windows-gnu-0.4.0.BUILD.bazel  winapi-x86_64-pc-windows-gnu-0.4.0.BUILD.bazel
rust/gigasecond/src/: lib.rs
rust/grains/: BUILD.bazel
rust/grains/src/: lib.rs
rust/hello-world/: BUILD.bazel
rust/high-scores/: BUILD.bazel
rust/high-scores/src/: lib.rs
rust/isbn-verifier/: BUILD.bazel  Cargo.toml
rust/isogram/: BUILD.bazel
rust/leap/: BUILD.bazel
rust/leap/src/: lib.rs
rust/matching-brackets/: BUILD.bazel
rust/matching-brackets/src/: lib.rs
rust/minesweeper/: BUILD.bazel
rust/minesweeper/src/: lib.rs
rust/nth-prime/: BUILD.bazel
rust/nth-prime/src/: lib.rs
rust/proverb/: BUILD.bazel
rust/proverb/src/: lib.rs
rust/raindrops/: BUILD.bazel
rust/raindrops/src/: lib.rs
rust/reverse-string/: BUILD.bazel
rust/reverse-string/src/: lib.rs
rust/robot-name/: BUILD.bazel  Cargo.toml
rust/robot-name/cargo/: BUILD.bazel  crates.bzl
rust/robot-name/cargo/remote/: cfg-if-0.1.10.BUILD.bazel  getrandom-0.1.15.BUILD.bazel  lazy_static-1.4.0.BUILD.bazel  libc-0.2.77.BUILD.bazel  ppv-lite86-0.2.9.BUILD.bazel  rand-0.7.3.BUILD.bazel  rand_chacha-0.2.2.BUILD.bazel  rand_core-0.5.1.BUILD.bazel  rand_hc-0.2.0.BUILD.bazel  wasi-0.9.0+wasi-snapshot-preview1.BUILD.bazel
rust/robot-name/src/: lib.rs
rust/saddle-points/: BUILD.bazel
rust/saddle-points/src/: lib.rs
rust/say/: BUILD.bazel
rust/say/src/: lib.rs
rust/simple-linked-list/src/: lib.rs
rust/space-age/: BUILD.bazel
rust/space-age/src/: lib.rs
rust/sublist/: BUILD.bazel
rust/sublist/src/: lib.rs
rust/sum-of-multiples/: BUILD.bazel
rust/sum-of-multiples/src/: lib.rs
(+4 files in other folders)
