load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "hello-world",
    srcs = ["hello_world.cpp"],
    hdrs = ["hello_world.h"],
)

cc_test(
    name = "hello-world-test",
    srcs = ["hello_world_test.cpp"],
    deps = [
        "//:hello-world",
        "//test",
    ],
)
