load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "hello-world",
    srcs = ["hello_world.cpp"],
    hdrs = ["hello_world.h"],
)

cc_library(
    name = "test-main",
    srcs = ["test/tests-main.cpp"],
    hdrs = ["test/catch.hpp"],
)

cc_test(
    name = "unittest",
    srcs = ["hello_world_test.cpp"],
    deps = [
        "//:hello-world",
        "//:test-main",
    ],
)
