load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "reverse-string",
    srcs = ["reverse_string.cpp"],
    hdrs = ["reverse_string.h"],
)

cc_library(
    name = "test-main",
    srcs = ["test/tests-main.cpp"],
    hdrs = ["test/catch.hpp"],
)

cc_test(
    name = "unittest",
    srcs = ["reverse_string_test.cpp"],
    deps = [
        ":reverse-string",
        ":test-main",
    ],
)
