load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "two-fer",
    srcs = ["two_fer.cpp"],
    hdrs = ["two_fer.h"],
)

cc_library(
    name = "test-main",
    srcs = ["test/tests-main.cpp"],
    hdrs = ["test/catch.hpp"],
)

cc_test(
    name = "unittest",
    srcs = ["two_fer_test.cpp"],
    deps = [
        ":test-main",
        ":two-fer",
    ],
)
