load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "difference-of-squares",
    srcs = ["difference_of_squares.go"],
    importpath = "diffsquares",
)

go_test(
    name = "diffsquares_test",
    srcs = [
        "difference_of_squares_test.go",
    ],
    embed = [":difference-of-squares"],
)
