load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hello-world",
    srcs = ["hello_world.go"],
    importpath = "greeting",
    visibility = ["//visibility:public"],
)

go_test(
    name = "greeting_test",
    srcs = ["hello_world_test.go"],
    embed = [":hello-world"],
)
