load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protein_translation",
    srcs = ["protein_translation.go"],
    importpath = "protein",
)

go_test(
    name = "protein_translation_test",
    srcs = ["protein_translation_test.go"],
    embed = [":protein_translation"],
)
