load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "raindrops",
    srcs = ["raindrops.go"],
    importpath = "raindrops",
)

go_test(
    name = "raindrops_test",
    srcs = [
        "cases_test.go",
        "raindrops_test.go",
    ],
    embed = [":raindrops"],
)
