load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_test")

rust_library(
    name = "dot-dsl",
    srcs = ["src/lib.rs"],
    deps = [
        "//rust/dot-dsl/cargo:maplit",
    ],
)

rust_test(
    name = "unittest",
    srcs = ["tests/dot-dsl.rs"],
    deps = [
        ":dot-dsl",
        "//rust/dot-dsl/cargo:maplit",
    ],
)
